@@ -3,6 +3,7 @@
   date:    wip
   changes:
   - core: Add `each` general eager loop to ys::std
+  - core: Handle let RHS is mapping
 
 - version: 0.1.26
   date:    Mon Dec 11 10:24:17 PM PST 2023
